--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "Shubh",
   "license": "MIT",
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "2.0.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "ethereum-waffle": "^3.4.4",
     "hardhat": "^2.9.9"
   },
   "dependencies": {
